FIX | control panel alignmend issues

--- a/web/style.css
+++ b/web/style.css
@@ -58,7 +58,7 @@ h1 {
   padding: 1rem;
   margin-bottom: 1rem;
   width: 90vw;
-  max-width: 1200px;
+  max-width:1200px;
   border: 1px solid #444;
   box-shadow: 0 2px 10px rgba(0,0,0,0.13);
   box-sizing: border-box;
@@ -183,7 +183,7 @@ h1 {
 
 .logs-section {
   flex: 2;
-  min-width: 350px;
+  min-width: 780px;
 }
 
 .log-title {
